--- a/Stroymaterials/PageAdmin/PageAddMaterials.xaml
+++ b/Stroymaterials/PageAdmin/PageAddMaterials.xaml
@@ -65,7 +65,7 @@
         </Style>
     </Page.Resources>
 
-    <Grid x:Name="grid_materials" Width="640" Height="400" Background="#FFA0A0A0">
+    <Grid x:Name="grid_materials" Width="640" Height="400" Background="#FF77BDFF">
         <ListView x:Name="listview_materials" HorizontalAlignment="Center" Height="220" VerticalAlignment="Top" Width="640" Background="{x:Null}" Foreground="#FF6D6D6D" BorderBrush="Black" Margin="0,40,0,0">
             <ListView.View>
                 <GridView>
@@ -83,14 +83,14 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button  x:Name="button_add" Content="Добавить" HorizontalAlignment="Left" Height="40" Margin="210,270,0,0" VerticalAlignment="Top" Width="120" FontSize="20" Click="button_add_Click" BorderBrush="Black" Background="#FF656565" Foreground="Black"/>
-        <Button  x:Name="button_edit" Content="Изменить" HorizontalAlignment="Left" Height="40" Margin="350,270,0,0" VerticalAlignment="Top" Width="120" FontSize="20" Click="button_edit_Click" BorderBrush="Black" Background="#FF656565" Foreground="Black"/>
-        <Button  x:Name="button_del" Content="Удалить" HorizontalAlignment="Left" Height="40" Margin="490,270,0,0" VerticalAlignment="Top" Width="120" FontSize="20" Click="button_del_Click" BorderBrush="Black" Background="#FF656565" Foreground="Black"/>
-        <Button  x:Name="button_users" Content="Пользователи" HorizontalAlignment="Left" Margin="210,327,0,0" VerticalAlignment="Top" Width="145" Height="40" FontSize="20" Click="button_users_Click" BorderBrush="Black" Background="#FF656565" Foreground="Black"/>
-        <Button  x:Name="button_exit" Content="Выход" HorizontalAlignment="Left" Margin="10,270,0,0" VerticalAlignment="Top" Width="120" Height="40" FontSize="20" Click="button_exit_Click" BorderBrush="Black" Background="#FF656565" Foreground="Black"/>
+        <Button  x:Name="button_add" Content="Добавить" HorizontalAlignment="Left" Height="40" Margin="210,270,0,0" VerticalAlignment="Top" Width="120" FontSize="20" Click="button_add_Click" BorderBrush="Black" Background="#FF705D9C" Foreground="#CCCCFF"/>
+        <Button  x:Name="button_edit" Content="Изменить" HorizontalAlignment="Left" Height="40" Margin="350,270,0,0" VerticalAlignment="Top" Width="120" FontSize="20" Click="button_edit_Click" BorderBrush="Black" Background="#FF705D9C" Foreground="#CCCCFF"/>
+        <Button  x:Name="button_del" Content="Удалить" HorizontalAlignment="Left" Height="40" Margin="490,270,0,0" VerticalAlignment="Top" Width="120" FontSize="20" Click="button_del_Click" BorderBrush="Black" Background="#FF705D9C" Foreground="#CCCCFF"/>
+        <Button  x:Name="button_users" Content="Пользователи" HorizontalAlignment="Left" Margin="210,327,0,0" VerticalAlignment="Top" Width="145" Height="40" FontSize="20" Click="button_users_Click" BorderBrush="Black" Background="#FF705D9C" Foreground="#CCCCFF"/>
+        <Button  x:Name="button_exit" Content="Выход" HorizontalAlignment="Left" Margin="10,270,0,0" VerticalAlignment="Top" Width="120" Height="40" FontSize="20" Click="button_exit_Click" BorderBrush="Black" Background="#FF705D9C" Foreground="#CCCCFF"/>
         <TextBox  x:Name="textbox_search" HorizontalAlignment="Left" Height="25" Margin="210,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="15" BorderBrush="Black" Background="{x:Null}" Foreground="#FF3E3E3E" FontWeight="Bold" SelectionChanged="textbox_search_SelectionChanged"/>
-        <Label x:Name="label_search" Content="Поиск по названию" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.474,-0.343" FontWeight="Normal" Foreground="Black" FontSize="20"/>
-        <Button  x:Name="button_return" Content="Вернуться в каталог" HorizontalAlignment="Left" Margin="386,327,0,0" VerticalAlignment="Top" Width="224" Height="40" FontSize="20" BorderBrush="Black" Background="#FF656565" Foreground="Black" Click="button_return_Click"/>
+        <Label x:Name="label_search" Content="Поиск по названию" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.474,-0.343" FontWeight="Normal" Foreground="#CCCCFF" FontSize="20"/>
+        <Button  x:Name="button_return" Content="Вернуться в каталог" HorizontalAlignment="Left" Margin="386,327,0,0" VerticalAlignment="Top" Width="224" Height="40" FontSize="20" BorderBrush="Black" Background="#FF705D9C" Foreground="#CCCCFF" Click="button_return_Click"/>
 
     </Grid>
 </Page>
