--- a/Stroymaterials/PageAuthorization/PageRegistration.xaml
+++ b/Stroymaterials/PageAuthorization/PageRegistration.xaml
@@ -120,7 +120,7 @@
         </Style>
     </Page.Resources>
 
-    <Grid x:Name="grid_registration" Height="450" Width="800" Background="#FFA0A0A0">
+    <Grid x:Name="grid_registration" Height="450" Width="800" Background="#FF77BDFF">
         <Label x:Name="text_firstname" Content="Введите имя " HorizontalAlignment="Left" Margin="514,52,0,0" VerticalAlignment="Top" FontSize="20" Width="125" Height="37"/>
         <Label x:Name="text_lastname" Content="Введите фамилию " HorizontalAlignment="Left" Margin="488,114,0,0" VerticalAlignment="Top" FontSize="20" Width="178" Height="36"/>
         <Label x:Name="text_middlename" Content="Введите отчество" HorizontalAlignment="Left" Margin="492,175,0,0" VerticalAlignment="Top" FontSize="20" Width="170" Height="37"/>
@@ -138,8 +138,8 @@
         <PasswordBox x:Name="label_password" HorizontalAlignment="Left" Margin="58,148,0,0" VerticalAlignment="Top" Width="309" Height="26" FontSize="15" PasswordChanged="label_password_PasswordChanged"/>
         <PasswordBox x:Name="label_password_rep" HorizontalAlignment="Left" Margin="58,0,0,0" VerticalAlignment="Center" Width="309" Height="26" PasswordChanged="label_password_rep_PasswordChanged" FontSize="15"/>
         <Label x:Name="text_password_rep" Content="Подтвердите пароль" HorizontalAlignment="Left" Margin="110,174,0,0" VerticalAlignment="Top" FontSize="20" Width="205" Height="38"/>
-        <Button  x:Name="button_create" Content="Создать" HorizontalAlignment="Left" Margin="424,309,0,0" VerticalAlignment="Top" Width="138" Height="61" FontSize="20" IsCancel="True" IsDefault="True" Click="button_create_Click" BorderBrush="Black" Background="#FF656565" Foreground="Black" IsEnabled="False"/>
-        <Button  x:Name="button_back" Content="Назад" HorizontalAlignment="Left" Margin="594,309,0,0" VerticalAlignment="Top" Width="138" Height="61" FontSize="20" IsCancel="True" IsDefault="True" Click="button_back_Click" BorderBrush="Black" Background="#FF656565" Foreground="Black"/>
+        <Button  x:Name="button_create" Content="Создать" HorizontalAlignment="Left" Margin="424,309,0,0" VerticalAlignment="Top" Width="138" Height="61" FontSize="20" IsCancel="True" IsDefault="True" Click="button_create_Click" BorderBrush="Black" Background="#FF705D9C" Foreground="#CCCCFF" IsEnabled="False"/>
+        <Button  x:Name="button_back" Content="Назад" HorizontalAlignment="Left" Margin="594,309,0,0" VerticalAlignment="Top" Width="138" Height="61" FontSize="20" IsCancel="True" IsDefault="True" Click="button_back_Click" BorderBrush="Black" Background="#FF705D9C" Foreground="#CCCCFF"/>
         <DatePicker x:Name="label_datebirth" HorizontalAlignment="Left" Margin="424,275,0,0" VerticalAlignment="Top" Width="308" Height="27" FontSize="15" SelectedDateChanged="label_datebirth_SelectedDateChanged_1"/>
     </Grid>
 </Page>
